more labels and text

--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -19,9 +19,9 @@
   </table>
 </p>
 
+<br/><br/>
 <div>
-  Its a website, its a portal, its a map, its a database, its an expression of profound patriotism.
-  Here, represented by little dots on this map. We are the young farmers of America.  
+<img width="700" src="/images/text/its_a_website.png" alt="Its a website, its a portal, its a map, its a database, its an expression of profound patriotism. Here, represented by little dots on this map. We are the young farmers of America." />
 </div>
 
 <% content_for(:map) do %>
@@ -30,8 +30,7 @@
 
 <% content_for(:lower_half) do %>
   <div>
-    United in our commitment to soil fertility, local nutrition, national health and a yummy hereafter.
-    Land. Liberty. Stamina. Sunshine. These are the natural ingredients for an edible future.
+<img width="700" src="/images/text/united_in_our_commitment.png" alt="United in our commitment to soil fertility, local nutrition, national health and a yummy hereafter. Land. Liberty. Stamina. Sunshine. These are the natural ingredients for an edible future." />
   </div>   
 <% end %>
 
