--- a/app/views/nominations/new.html.erb
+++ b/app/views/nominations/new.html.erb
@@ -1,4 +1,4 @@
-<%= image_label("New_Nomination") %>
+<%= image_label("new_nomination") %>
 
 <% form_for(@nomination) do |f| %>
   <%= f.error_messages %>
@@ -32,7 +32,7 @@
     <%= f.text_field :date_of_birth_str, :size => 20  %>
   </p>
   <p>
-    <%= image_label "Nominees_profile" %> <br/>
+    <%= image_label "nominees_profile" %> <br/>
     <%= f.text_area :nominees_profile, :cols => 40, :rows => 5 %>
   </p>
   <p>
