--- a/app/views/surveys/forgotten.html.erb
+++ b/app/views/surveys/forgotten.html.erb
@@ -3,6 +3,6 @@
   Email:<br/>
   <%= text_field_tag :email %>
   
-  <%= submit_tag 'Remind Me >' %>
+  <%= submit_tag 'Remind Me  >', {:disable_with => "sending email ..."} %>
 
 <% end %>
