--- a/app/views/stages/index.html.erb
+++ b/app/views/stages/index.html.erb
@@ -1,14 +1,14 @@
 <% if @current_survey.percentage_completed >= 70 %>
 	 <p class='notice'>Thank you for taking the survey. We will review your survey and shortly be in touch. <%= link_to "Click here to log out.", :action => "done" %></p> 
 <%- else -%>
-  You have started the survey but no yet completed. 
+  You have started the survey but no yet finished. 
   <%= link_to "Click here", :action => "done" %> to log out and come back to it another day.
 <% end %>
 
 <table class="profile">
 <% for stage in @stages %>
   <tr class="profile <%= cycle('darker', 'lighter') %>" >
-    <td class="profile"><%= link_to stage.title, stage %></td>
+    <td class="profile"><%= link_to image_tag(stage.title_label, :alt => stage.title), stage %></td>
     <td class="profile">
       <%=h stage.percent_completed(session[:current_survey]) %>% done
     </td>
