--- a/app/views/admin_mailer/key_reminder.html.erb
+++ b/app/views/admin_mailer/key_reminder.html.erb
@@ -1,5 +1,6 @@
 G'day!
 
-	A new survey is waiting for you at:	http://<%= @domain -%>/surveys/resume/<%= @key %>
+	You can restart your survey by following the link below:	
+	http://<%= @domain -%>/surveys/resume/<%= @key %>
 
--- farm team
+-- serve your country food team
