--- a/app/views/stages/_address.html.erb
+++ b/app/views/stages/_address.html.erb
@@ -66,7 +66,7 @@
 	            :style=>"display:none;", 
 	            :alt => 'checking address...' %>
 	
-	<%= link_to_remote 'check address',
+	<%= link_to_remote 'click and see yourself on the map!',
 	      :url => {:controller => 'stages', :action => 'validate_address'},
 	      :before => "Element.show('spinner');",
 	      :complete => "Element.hide('spinner');",
