update rake tasks to allow the questions and pages to be updated when db:questions:load/db:pages:load is run. Also added user feedback from uservoice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 	<%= yield(:head) %>
 </head>
 <body>
+  <script src="http://serveyourcountryfood.uservoice.com/pages/general/widgets/tab.js?alignment=left&amp;color=6644FF" type="text/javascript"></script>
+
 <div id="doc2" class="yui-t2">
 
   <div id="hd" class="header">
