--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -3,6 +3,7 @@
 <%= javascript_include_tag  'mapping_helpers'  %>
 <%= javascript_include_tag  'HtmlControl'      %>
 <%= javascript_include_tag  'clusterer'        %>
+<%= javascript_include_tag  'EBubble'        %>
 
 <p>
   <table>
