--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -1,5 +1,5 @@
 <%= GMap.header %>
-<%= show_maps Survey.find_public %>
+<%= show_maps @public_surveys %>
 <%= javascript_include_tag  'mapping_helpers'  %>
 <%= javascript_include_tag  'HtmlControl'      %>
 <%= javascript_include_tag  'clusterer'        %>
