--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,15 @@
     </div> <!-- yui-g --> 
 
     <div class="yui-g middle">
+      <script type="text/javascript">
+        Flash.transferFromCookies();
+      </script>
       <% [:error, :warning, :notice].each do |level|
           if flash[level] -%>
             <div class="flash <%= level.to_s -%>"><%= flash[level] -%></div>
+            <script type="text/javascript">
+              Flash.writeDataTo("#{level}", $("flash #{level}"));            
+            </script>
         <% end -%>
       <% end -%>
 	 			<div id="content"><%= yield %></div> 			
