--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,15 +33,18 @@
     </div> <!-- yui-g --> 
 
     <div class="yui-g middle">
-      <div id="flash_error" class="flash error"></div>
-      <div id="flash_notice" class="flash notice"></div>
       <script type="text/javascript">
         Flash.transferFromCookies();
-        Flash.writeDataTo('error', $('flash_error'));
-        Flash.writeDataTo('notice', $('flash_notice'));
       </script>
-      
-	 		<div id="content"><%= yield %></div> 			
+      <% [:error, :warning, :notice].each do |level|
+          if flash[level] -%>
+            <div class="flash <%= level.to_s -%>"><%= flash[level] -%></div>
+            <script type="text/javascript">
+              Flash.writeDataTo("#{level}", $("flash #{level}"));            
+            </script>
+        <% end -%>
+      <% end -%>
+	 			<div id="content"><%= yield %></div> 			
     </div>  <!-- yui-g -->   
 
     <div class="yui-g middle">
