change header. pages modified.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <div id="hd" class="header">
 		<%= link_to image_label_no_mouseover("center/serve_your_country_food_2.jpg"), home_path %>  
-    <%= image_tag("center/farm_tools.png") %> 
+    <%#= image_tag("center/farm_tools.png") %> 
 	  <%#= image_tag("hr_gray_875x25.png") %>
 	</div> <!-- hd end -->
 
