--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 			<div class="yui-g footer">
 				<div class ='sidebar'>
 					<%= yield(:footer ) || render(:partial => "/layouts/default_sidebar_content") %> 
-				A project of <%= link_to "the greenhorns", 'http://thegreenhorns.net/' %>				
+				  <p>A project of <%= link_to "the greenhorns", 'http://thegreenhorns.net/' %></p>
 				</div> <!-- sidebar end -->	    	
 			</div>
 		</div> <!-- ft end -->		
